--- a/src/main/resources/templates/adduserpage.html
+++ b/src/main/resources/templates/adduserpage.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 <form action="/AddUsers">
-  <label>User does not exist or credentials invalid!</label><br><br>
+  <label>Add User!</label><br><br>
   <label>Create User</label><br>
-  <input type="text" name="userid"><br>
-  <input type="password" name="userpassword"><br>
+  <input type="text" name="userid" placeholder="Username" required><br>
+  <input type="password" name="userpassword" placeholder="Password" required><br>
   <input type="submit" value="Add user"><br><br>
 </form>
 <form action="/Home">
