--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -4,13 +4,12 @@
 <div align="center">
     <h1>Login!</h1>
     <form action="/Login">
-        <label>Username</label>
-        <input type="text" name="userid"><br>
-
-        <label>Password&nbsp;</label>
-        <input type="password" name="userpassword"><br><br>
-
+        <input type="text" name="userid" placeholder="Username" required><br>
+        <input type="password" name="userpassword" placeholder="Password" required><br><br>
         <input type="submit" value="Login">
+    </form>
+    <form action="/AddUsers"><br>
+        <input type="submit" value="Create New User">
     </form>
 </div>
 </body>
